--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
-
+    <div>
+      <h1>Broadway Design</h1>
+      <p>Home</p>
+      <p>Process</p>
+      <p>Work</p>
+      <p>Team</p>
+      <p>Contact</p>
+    </div>
   </body>
+
 </html>
