--- a/index.html
+++ b/index.html
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Broadway Design</title>
-    <link rel="stylesheet" href="resources/css/style.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Broadway Design</title>
+  <link rel="stylesheet" href="resources/css/style.css">
+</head>
+
+<body>
+  <!--Upper Section of Page-->
+  <div>
+    <h1>Broadway Design</h1>
+    <p>Home</p>
+    <p>Process</p>
+    <p>Work</p>
+    <p>Team</p>
+    <p>Contact</p>
+  </div>
+  <!--Middle Section of Page-->
+  <div>
+    <h2>Our Process</h2>
     <div>
-      <h1>Broadway Design</h1>
-      <p>Home</p>
-      <p>Process</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
     </div>
-  </body>
+    <div>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+    </div>
+    <div>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+  </div>
+  <!--Second to Last Section of Page-->
+  <div>
+    <h2>Designed in New York</h2>
+  </div>
+  <!--Lower Section of Page-->
+  <div>
+    <div>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    <!--Footer-->
+    <div>
+      <p>© Broadway 2017</p>
+    </div>
+  </div>
+</body>
 
 </html>
