Include class in preparation for css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="resources/css/style.css">
 </head>
 
-<body>
+<body class="colorful">
   <!--Upper Section of Page-->
   <div>
     <h1>Broadway Design</h1>
@@ -18,7 +18,7 @@
     <p>Contact</p>
   </div>
   <!--Middle Section of Page-->
-  <div>
+  <div class="skeleton">
     <h2>Our Process</h2>
     <div>
       <h3>Identify</h3>
@@ -34,29 +34,33 @@
     </div>
   </div>
   <!--Second to Last Section of Page-->
-  <div>
+  <div class="colorful">
     <h2>Designed in New York</h2>
   </div>
   <!--Lower Section of Page-->
-  <div>
+  <div class="skeleton">
     <div>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
     </div>
+  </div>
+  <div class="skeleton">
     <div>
       <h3>Team</h3>
       <p>We're Hiring!</p>
     </div>
+  </div>
+  <div class="skeleton">
     <div>
       <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
-    <!--Footer-->
-    <div>
-      <p>© Broadway 2017</p>
-    </div>
+  </div>
+  <!--Footer-->
+  <div class="footer">
+    <p>© Broadway 2017</p>
   </div>
 </body>
 
