Fix incorrect class placement

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="resources/css/style.css">
 </head>
 
-<body class="colorful">
+<body>
   <!--Upper Section of Page-->
-  <div>
+  <div class="colorful">
     <h1>Broadway Design</h1>
     <p>Home</p>
     <p>Process</p>
