Add psuedo-links in upper page and in footer

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <!--Upper Section of Page-->
   <div class="colorful">
     <h1>Broadway Design</h1>
-    <p>Home</p>
-    <p>Process</p>
-    <p>Work</p>
-    <p>Team</p>
-    <p>Contact</p>
+    <p><a href="#home">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
   </div>
   <!--Middle Section of Page-->
   <div class="skeleton">
@@ -60,7 +60,13 @@
   </div>
   <!--Footer-->
   <div class="footer">
-    <p>© Broadway 2017</p>
+    <p>© Broadway 2017
+      <a href="#home">Home</a>
+      <a href="#process">Process</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </p>
   </div>
 </body>
 
