--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <!--Upper Section of Page-->
   <div class="colorful">
     <h1>Broadway Design</h1>
-    <p><a href="#home">Home</a></p>
-    <p><a href="#process">Process</a></p>
-    <p><a href="#work">Work</a></p>
-    <p><a href="#team">Team</a></p>
-    <p><a href="#contact">Contact</a></p>
+    <p><a class="navi" href="#home">Home</a></p>
+    <p><a class="navi" href="#process">Process</a></p>
+    <p><a class="navi" href="#work">Work</a></p>
+    <p><a class="navi" href="#team">Team</a></p>
+    <p><a class="navi" href="#contact">Contact</a></p>
   </div>
   <!--Middle Section of Page-->
   <div class="skeleton">
@@ -61,11 +61,11 @@
   <!--Footer-->
   <div class="footer">
     <p>© Broadway 2017
-      <a href="#home">Home</a>
-      <a href="#process">Process</a>
-      <a href="#work">Work</a>
-      <a href="#team">Team</a>
-      <a href="#contact">Contact</a>
+      <a class="navi" href="#home">Home</a>
+      <a class="navi" href="#process">Process</a>
+      <a class="navi" href="#work">Work</a>
+      <a class="navi" href="#team">Team</a>
+      <a class="navi" href="#contact">Contact</a>
     </p>
   </div>
 </body>
