--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
   <div class="skeleton">
     <h2>Our Process</h2>
     <div>
+      <img src="resources/images/identify.svg" alt="Swirling arrow point upwards">
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
     </div>
     <div>
+      <img src="resources\images\understand.svg" alt="Two arrows going circular">
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
     </div>
     <div>
+      <img src="resources\images\execute.svg" alt="A large arrow with three dimensional construct">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
